<resources>
    <string name="app_name">BeAt</string>
    <string name="email_address">Email Address</string>
    <string name="text_name">Name</string>
    <string name="id_number">ID Number</string>
    <string name="device_name">Device Name</string>
    <string name="mac_address">MAC Address</string>
    <string name="on_off">ON/OFF</string>
    <string name="discoverable">Discoverable</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="register_button">REGISTER</string>
    <string name="bluetooth_settings">BLUETOOTH SETTINGS</string>
    <string name="item_view">View</string>
    <string name="date_time">Date/Time:</string>
    <string name="name_label">Name:</string>
    <string name="name">Name</string>
    <string name="idnumber_label">ID Number:</string>
    <string name="device_name_label">Device Name:</string>
    <string name="mac_address_label">Mac Address:</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="Ok" />
    <string name="Yes">yes</string>
    <string name="No">no</string>
    <string name="time_date">Time/Date</string>
    <string name="text_id">ID</string>
    <string name="text_enter">enter details below</string>
    <string name="text_available">available devices</string>
    <string name="make_discoverable">make discoverable</string>
    <string name="blue_on">on</string>
    <string name="blue_searching">searching</string>
    <string name="back_go">Back</string>
    <string name="beat_splashtext">BeAt</string>
</resources>