<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewcard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="5dp"
    app:cardBackgroundColor="#D7F8FB"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/text_id"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tvnamest"
            app:layout_constraintEnd_toStartOf="@+id/tvtime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_allover"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvtimest"
            app:layout_constraintTop_toBottomOf="@+id/tvmac" />

        <TextView
            android:id="@+id/tvnamest"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_allover"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/name_label"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtime" />

        <TextView
            android:id="@+id/tvname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_allover"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tvnamest"
            android:text=""
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvnamest"
            app:layout_constraintTop_toBottomOf="@+id/tvtime" />

        <TextView
            android:id="@+id/tvregnost"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvnamest"
            android:layout_margin="@dimen/margin_allover"
            android:text="@string/idnumber_label"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvnamest" />

        <TextView
            android:id="@+id/tvregno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvname"
            android:layout_margin="@dimen/margin_allover"
            android:layout_toEndOf="@id/tvregnost"
            android:text=""
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvregnost"
            app:layout_constraintTop_toBottomOf="@+id/tvnamest" />

        <TextView
            android:id="@+id/tvDeviceNamest"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvregnost"
            android:layout_margin="@dimen/margin_allover"
            android:text="@string/device_name_label"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvregnost" />

        <TextView
            android:id="@+id/tvDeviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvregno"
            android:layout_margin="@dimen/margin_allover"
            android:layout_toEndOf="@id/tvDeviceNamest"
            android:text=""
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvDeviceNamest"
            app:layout_constraintTop_toBottomOf="@+id/tvregnost" />

        <TextView
            android:id="@+id/tvmacst"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDeviceNamest"
            android:layout_margin="@dimen/margin_allover"
            android:text="@string/mac_address_label"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceNamest" />

        <TextView
            android:id="@+id/tvmac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDeviceName"
            android:layout_margin="@dimen/margin_allover"
            android:layout_toEndOf="@id/tvmacst"
            android:text=""
            android:textColor="#000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvmacst"
            app:layout_constraintTop_toBottomOf="@+id/tvDeviceNamest" />

        <TextView
            android:id="@+id/tvtimest"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvmacst"
            android:layout_margin="@dimen/margin_allover"
            android:text="@string/email_address"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvmacst" />

        <TextView
            android:id="@+id/tvtime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvmac"
            android:layout_margin="@dimen/margin_allover"
            android:layout_toEndOf="@id/tvtimest"
            android:hint="@string/time_date"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvId"
            tools:layout_editor_absoluteY="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
